--- a/views/partner_views.xml
+++ b/views/partner_views.xml
@@ -8,7 +8,7 @@
             <xpath expr="//field[@name='email']" position="after">
                 <!-- Usamos un grupo para garantizar la alineación vertical -->
                 <group>
-                    <!-- Añadimos el checkbox con su texto explicativo -->
+                    <!-- Añadimos el checkbox debajo del campo email -->
                     <field name="x_is_a_client"/>
                 </group>
             </xpath>
