--- a/views/partner_views.xml
+++ b/views/partner_views.xml
@@ -6,11 +6,11 @@
         <field name="arch" type="xml">
             <!-- Localizamos el campo 'email' y agregamos el checkbox debajo -->
             <xpath expr="//field[@name='email']" position="after">
-                <!-- Usamos un grupo para garantizar la alineación vertical -->
-                <group>
+                <!-- Usamos un div para garantizar la alineación vertical -->
+                <div>
                     <!-- Añadimos el checkbox debajo del campo email -->
                     <field name="x_is_a_client"/>
-                </group>
+                </div>
             </xpath>
         </field>
     </record>
