--- a/views/partner_views.xml
+++ b/views/partner_views.xml
@@ -4,9 +4,9 @@
         <field name="model">res.partner</field>
         <field name="inherit_id" ref="base.view_partner_form"/>
         <field name="arch" type="xml">
-            <!-- Localizamos el campo 'vat' y agregamos el checkbox debajo -->
-            <xpath expr="//field[@name='vat']" position="after">
-                <!-- Añadimos el checkbox debajo del campo vat (RFC) -->
+            <!-- Localizamos el último campo del grupo y agregamos el checkbox justo debajo -->
+            <xpath expr="//field[@name='category_id']" position="after">
+                <!-- Añadimos el checkbox debajo del último campo del grupo -->
                 <group>
                     <field name="x_is_a_client" class="o_form_field"/>
                 </group>
